added healenum setup